# openhands-sdk-client

./: .env.example  .gitignore  README.md  pyproject.toml  server.py  server_standalone.py
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/electron/: main.cjs
frontend/src/: App.tsx  index.css
frontend/src/components/: CapabilityNotice.tsx  Layout.tsx  NewChatModal.tsx  SettingsModal.tsx
frontend/src/components/conversation/: WorkspaceTabs.tsx
frontend/src/components/design/: SettingsPrimitives.tsx  index.ts
frontend/src/components/shell/: AppPage.tsx  AppShell.tsx  Rail.tsx  index.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/lib/backend/: capabilities.test.ts  capabilities.ts  connection.test.ts  connection.ts  http.ts  index.ts  openhands-v1.test.ts  openhands-v1.ts  prototype.ts  types.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Launch.tsx  Login.tsx  Onboarding.tsx  ProductPage.tsx  Settings.tsx  SharedConversation.tsx
frontend/src/theme/: appearance.tsx  index.ts
frontend/src/types/: index.ts
openhands_client/: __init__.py  client.py  config.py  conversation_manager.py  event_handler.py
static/css/: style.css
static/js/: api.js  chat.js  dashboard.js
templates/: base.html  chat.html  index.html
