[project]
name = "openhands-client"
version = "0.1.0"
description = "Custom chat interface and dashboard client for OpenHands"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openhands-sdk>=0.1.0",
    "openhands-tools>=0.1.0",
    "openhands-workspace>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openhands_client"]
